[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
num-bigint = {version = "0.4.3", features = ["rand"]}
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"
serde = {version = "1.0.163", features = ["derive"]}
serde_bytes = "0.11.9"
serde_derive = "1.0.163"
serde_json = "1.0.96"
num = {version="0.4.0", features = ["rand"]}
log = "0.4"
env_logger = "0.8"

